; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_macphyclk_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_macphyclk_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_hardware = type { i32 }

@ON = common dso_local global i32 0, align 4
@SICF_MPCLKE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcms_b_macphyclk_set(%struct.brcms_hardware* %0, i32 %1) #0 {
  %3 = alloca %struct.brcms_hardware*, align 8
  %4 = alloca i32, align 4
  store %struct.brcms_hardware* %0, %struct.brcms_hardware** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @ON, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load %struct.brcms_hardware*, %struct.brcms_hardware** %3, align 8
  %10 = load i32, i32* @SICF_MPCLKE, align 4
  %11 = load i32, i32* @SICF_MPCLKE, align 4
  %12 = call i32 @brcms_b_core_ioctl(%struct.brcms_hardware* %9, i32 %10, i32 %11)
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.brcms_hardware*, %struct.brcms_hardware** %3, align 8
  %15 = load i32, i32* @SICF_MPCLKE, align 4
  %16 = call i32 @brcms_b_core_ioctl(%struct.brcms_hardware* %14, i32 %15, i32 0)
  br label %17

17:                                               ; preds = %13, %8
  ret void
}

declare dso_local i32 @brcms_b_core_ioctl(%struct.brcms_hardware*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
